# catvnc

./: .env.example  .gitignore  README.md  pyproject.toml
deploy/: README.md  catvnc-backend.service  install_on_server.sh  nginx-catvnc.conf  rollback_nginx.sh  switch_nginx.sh  tunnel.sh
scripts/: seed_device.py
src/catvnc/: config.py  db.py  deps.py  ice_injector.py  ice_rewriter.py  main.py  models.py
src/catvnc/routers/: agent.py  proxy.py  signaling.py
tests/: test_ice_injector.py  test_ice_rewriter.py
